--- a/eShift.csproj
+++ b/eShift.csproj
@@ -62,8 +62,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Business\Interface\IJobService.cs" />
     <Compile Include="Business\Interface\IUserService.cs" />
+    <Compile Include="Business\Services\JobService.cs" />
     <Compile Include="Business\Services\UserService.cs" />
+    <Compile Include="Forms\CustomerJobCreateUpdateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CustomerJobCreateUpdateForm.Designer.cs">
+      <DependentUpon>CustomerJobCreateUpdateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +83,12 @@
     </Compile>
     <Compile Include="Forms\FrmCustomerDashboard.Designer.cs">
       <DependentUpon>FrmCustomerDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FrmCustomerJobsMngment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmCustomerJobsMngment.Designer.cs">
+      <DependentUpon>FrmCustomerJobsMngment.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FrmCustomerProfile.cs">
       <SubType>Form</SubType>
@@ -94,20 +108,36 @@
     <Compile Include="Forms\FrmRegister.Designer.cs">
       <DependentUpon>FrmRegister.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Container.cs" />
+    <Compile Include="Model\Invoice.cs" />
+    <Compile Include="Model\Job.cs" />
+    <Compile Include="Model\Load.cs" />
+    <Compile Include="Model\Payment.cs" />
+    <Compile Include="Model\Staff.cs" />
+    <Compile Include="Model\TransportUnit.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="Model\Vehicle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Interface\IJobRepository.cs" />
     <Compile Include="Repository\Interface\IUserRepository.cs" />
+    <Compile Include="Repository\Services\JobRepository.cs" />
     <Compile Include="Repository\Services\UserRepository.cs" />
     <Compile Include="Utilities\DbConst.cs" />
     <Compile Include="Utilities\Enum.cs" />
     <Compile Include="Utilities\PasswordUtil.cs" />
     <Compile Include="Utilities\ValidationUtil.cs" />
+    <EmbeddedResource Include="Forms\CustomerJobCreateUpdateForm.resx">
+      <DependentUpon>CustomerJobCreateUpdateForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmCustomer.resx">
       <DependentUpon>FrmCustomer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmCustomerDashboard.resx">
       <DependentUpon>FrmCustomerDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmCustomerJobsMngment.resx">
+      <DependentUpon>FrmCustomerJobsMngment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmCustomerProfile.resx">
       <DependentUpon>FrmCustomerProfile.cs</DependentUpon>
@@ -141,6 +171,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Assest\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
