--- a/eShift.csproj
+++ b/eShift.csproj
@@ -63,11 +63,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business\Interface\IContainerService.cs" />
+    <Compile Include="Business\Interface\IInvoiceService.cs" />
     <Compile Include="Business\Interface\IJobService.cs" />
     <Compile Include="Business\Interface\IStaffService.cs" />
     <Compile Include="Business\Interface\ITransportUnitService.cs" />
     <Compile Include="Business\Interface\IUserService.cs" />
     <Compile Include="Business\Services\ContainerService.cs" />
+    <Compile Include="Business\Services\InvoiceService.cs" />
     <Compile Include="Business\Services\JobService.cs" />
     <Compile Include="Business\Services\StaffService.cs" />
     <Compile Include="Business\Services\TransportUnitService.cs" />
@@ -95,6 +97,12 @@
     </Compile>
     <Compile Include="Forms\Admin\FrmAdminManageCustomers.Designer.cs">
       <DependentUpon>FrmAdminManageCustomers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Admin\FrmAdminManageInvoice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Admin\FrmAdminManageInvoice.Designer.cs">
+      <DependentUpon>FrmAdminManageInvoice.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Admin\FrmAdminManageJobs.cs">
       <SubType>Form</SubType>
@@ -175,14 +183,18 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Interface\IContainerRepository.cs" />
+    <Compile Include="Repository\Interface\IInvoiceRepository.cs" />
     <Compile Include="Repository\Interface\IJobRepository.cs" />
+    <Compile Include="Repository\Interface\IPaymentRepository.cs" />
     <Compile Include="Repository\Interface\IStaffRepository.cs" />
     <Compile Include="Repository\Interface\ITransportUnitRepository.cs" />
     <Compile Include="Repository\Interface\IUserRepository.cs" />
     <Compile Include="Business\Interface\IVehicleService.cs" />
     <Compile Include="Repository\Interface\IVehicleRepository.cs" />
     <Compile Include="Repository\Services\ContainerRepository.cs" />
+    <Compile Include="Repository\Services\InvoiceRepository.cs" />
     <Compile Include="Repository\Services\JobRepository.cs" />
+    <Compile Include="Repository\Services\PaymentRepository.cs" />
     <Compile Include="Repository\Services\StaffRepository.cs" />
     <Compile Include="Repository\Services\TransportUnitRepository.cs" />
     <Compile Include="Repository\Services\UserRepository.cs" />
@@ -203,6 +215,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Admin\FrmAdminManageCustomers.resx">
       <DependentUpon>FrmAdminManageCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Admin\FrmAdminManageInvoice.resx">
+      <DependentUpon>FrmAdminManageInvoice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Admin\FrmAdminManageJobs.resx">
       <DependentUpon>FrmAdminManageJobs.cs</DependentUpon>
